<resources>
    <string name="app_name">Alaga Aqui, Alaga Lá</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_editar_perfil">Editar Perfil</string>
    <string name="action_sair">Sair</string>

    <string name="menu_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="nome_usuario">Nome de Usuário</string>
    <string name="senha">Senha</string>
    <string name="manter_conexao">Mantenha-me conectado</string>
    <string name="login">Login</string>
    <string name="n_o_possui_uma_conta_cadastre_se">Não possui uma conta? Cadastre-se!</string>
    <string name="esqueceu_a_senha">Esqueceu a senha? Clique aqui!</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="cadastro">Cadastro</string>
    <string name="telefone">Telefone</string>
    <string name="titulo_cadastro">Cadastro</string>
    <string name="titulo_login">Login</string>
    <string name="j_possui_conta_fa_a_login">Já possui conta? Faça login!</string>
    <string name="title_activity_menu">menuActivity</string>
    <string name="mapa">Mapa</string>
    <string name="buscar_endereco">Buscar Endereço</string>
    <string name="enderecos_favoritos">Endereços Favoritos</string>
    <string name="sobre">Sobre</string>
</resources>