<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/yellow">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_login"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="70dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:orientation="vertical"
        android:padding="15dp">

    <EditText
        android:id="@+id/edit_nome_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_menu_login"
        android:gravity="center"
        android:hint="@string/nome_usuario"
        />

    <EditText
        android:id="@+id/edit_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_login_senha"
        android:gravity="center"
        android:hint="@string/senha"
        />

    <CheckBox
        android:id="@+id/checkbox_logado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manter_conexao"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"

        android:text="@string/login" />

    <TextView
        android:id="@+id/text_esqueceu_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:text="@string/esqueceu_a_senha"
        />

    </LinearLayout>

    <TextView
        android:id="@+id/text_criar_conta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:text="@string/n_o_possui_uma_conta_cadastre_se"
        />

</RelativeLayout>